log
Tue, Sep 12, 2023  2:48:15 PM: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
13b3eea
Tue, Sep 12, 2023  3:09:50 PM: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
8a152ed
Tue, Sep 12, 2023  3:14:02 PM: 
 treemap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  5|7
total_score: 5/70
2e3a491
Tue, Sep 12, 2023  3:14:53 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|7
total_score: 5/70
e3d864e
Tue, Sep 12, 2023  3:17:35 PM: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  6|7
total_score: 5/70
ead385b
Tue, Sep 12, 2023  3:22:59 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
df361d5
Tue, Sep 12, 2023  3:27:08 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
ea4cc32
Tue, Sep 12, 2023  3:35:20 PM: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  6|7
total_score: 5/70
af9f7a7
Tue, Sep 12, 2023  3:43:29 PM: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
5fe88f2
Tue, Sep 12, 2023  3:51:40 PM: 
 treemap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  11|6
total_score: 15/70
6307cdc
Tue, Sep 12, 2023  4:01:36 PM: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  11|6
total_score: 15/70
f0faa82
Tue, Sep 12, 2023  4:17:33 PM: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  13|5
total_score: 25/70
601f50e
Tue, Sep 12, 2023  4:21:47 PM: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
da84ae5
Tue, Sep 12, 2023  4:23:34 PM: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
1097b85
Tue, Sep 12, 2023  4:25:18 PM: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  15|4
total_score: 25/70
bab1024
Tue, Sep 12, 2023  9:33:48 PM: 
 treemap.c | 61 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 61 insertions(+)
 tests:  0|0
f7009e1
Tue, Sep 12, 2023  9:40:26 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
98d3de2
Tue, Sep 12, 2023  9:43:04 PM: 
 treemap.c | 65 ++-------------------------------------------------------------
 1 file changed, 2 insertions(+), 63 deletions(-)
 tests:  15|4
total_score: 25/70
0b05f86
Tue, Sep 12, 2023  9:47:57 PM: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  16|4
total_score: 30/70
b290de9
Tue, Sep 12, 2023  9:49:41 PM: 
 treemap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  17|4
total_score: 35/70
8771c25
Tue, Sep 12, 2023 10:13:40 PM: 
 treemap.c | 34 ++++++++++++++++++++++++++--------
 1 file changed, 26 insertions(+), 8 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:154:9: error: implicit declaration of function 'removeTreeNode' [-Werror=implicit-function-declaration]
         removeTreeNode(tree,next);
         ^~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
efc109f
Tue, Sep 12, 2023 10:14:04 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
c5f877b
Tue, Sep 12, 2023 10:17:03 PM: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'firstTreeMap':
treemap.c:204:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return currentMin;
            ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1e244b1
Tue, Sep 12, 2023 10:17:27 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
abeabbd
Tue, Sep 12, 2023 10:19:19 PM: 
 treemap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  20|2
total_score: 45/70
ab563f4
Tue, Sep 12, 2023 10:33:34 PM: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  23|2
total_score: 50/70
ebaceeb
Tue, Sep 12, 2023 10:35:42 PM: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  23|2
total_score: 50/70
17e50db
Wed, Sep 13, 2023  8:17:30 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  23|2
total_score: 50/70
d72545e
Wed, Sep 13, 2023  8:25:02 PM: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
db340d1
Wed, Sep 13, 2023  8:25:27 PM: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  23|2
total_score: 50/70
a25341f
Wed, Sep 13, 2023  8:29:51 PM: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  23|2
total_score: 50/70
ebe8042
Wed, Sep 13, 2023  8:30:50 PM: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
043be25
Wed, Sep 13, 2023  8:33:20 PM: 
 treemap.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  0|0
78eb923
Wed, Sep 13, 2023  8:34:57 PM: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
93a1c33
Wed, Sep 13, 2023  8:38:07 PM: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
c797cb8
Wed, Sep 13, 2023  8:39:39 PM: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  20|2
total_score: 45/70
4b5e9f3
Wed, Sep 13, 2023  8:45:47 PM: 
 treemap.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  20|2
total_score: 45/70
ca7be10
Wed, Sep 13, 2023  8:46:51 PM: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  23|2
total_score: 50/70
8a23e50
Wed, Sep 13, 2023  8:49:02 PM: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  25|1
total_score: 60/70
6461175
Wed, Sep 13, 2023  8:58:42 PM: 
 treemap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
b96bb02
Wed, Sep 13, 2023  9:03:05 PM: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  25|1
total_score: 60/70
f1e5c69
Wed, Sep 13, 2023  9:09:42 PM: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  27|1
total_score: 60/70
aed22c0
Wed, Sep 13, 2023  9:15:56 PM: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
7d3c8d2
Wed, Sep 13, 2023  9:19:28 PM: 
 treemap.c | 22 +++++++++-------------
 1 file changed, 9 insertions(+), 13 deletions(-)
 tests:  27|1
total_score: 60/70
5cf401b
Wed, Sep 13, 2023  9:20:24 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
8207f4a
Wed, Sep 13, 2023  9:22:25 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  27|1
total_score: 60/70
c0d9b96
